tests/fail/test_optional_optional_reading.nim
import options

import ../../protobuf_serialization

discard @[].readValue(Option[Option[int]])
